css/style.css
/* DEFAULT SETTINGS */
* {
    font-family: 'Roboto', sans-serif;
    color: rgb(255, 255, 255);
}

#wip {
    text-align: center;
    width: 50%;
    position: absolute;
    top: 50%;
    transform: translate(50%, -50%);
}

#wip>.big {
    font-size: 10rem;
}

/*Social links*/
.fa,
.fa-brands {
    color: rgb(255, 255, 255);
    text-shadow: -2px 0 #000, 0 2px #000, 2px 0 #000, 0 -2px #000;
    overflow: visible;
}

.social-links {
    display: flex;
    justify-content: center;
}

.social-links>ul {
    flex-direction: column;
    padding: 0px;
}

.social-links>ul>li {
    margin: 1rem;
}

#construction {
    display: block;
    width: 600px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 90px;
}

#spacer {
    width: 128px;
    margin: 0px;
}

html {
    height: 100%;
}

body {
    display: flex;
    flex-direction: column;
    background: linear-gradient(45deg, #9b2c9b, #5c2870, rgb(40, 36, 65), rgb(51 46 46));
    background-color: #363636;
    background-image: url('../images/norway.jpg');
    background-blend-mode: multiply;
    background-repeat: no-repeat;
    background-size: cover;
    object-fit: cover;
    min-height: 100vh;
    margin: 0;
    overflow-x: hidden;
}

#header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    /*border-bottom: solid 1rem;*/
    background-color: rgba(128, 128, 128, 0.1);
    padding-bottom: 0.05em;
    width: 100%;
}

#header-links {
    flex: 1;
    display: flex;
    justify-content: center;
}

.header-link {
    text-decoration: dashed;
    color: white;
    font-size: 1.5rem;
    background-color: transparent;
    padding: 1rem 1rem 1rem 1rem;
}

.header-link>a {
    text-decoration: none;
}

#currentPage {
    opacity: .6;
}

#header-content {
    background-color: black;
}


#logo {
    padding: 1rem;
}

#logo-img {
    width: 6rem;
    margin-right: auto;
    background-color: transparent;
    align-self: center;
}


footer {
    text-align: center;
    margin-top: auto;
    background-color: rgba(99, 99, 99, 0.219);
    padding: 1rem;
}



h1.about {
    display: flex;
    justify-content: center;
    margin: 0px;
    padding: 25px;
}

ul {
    list-style-type: none;
    display: flex;
    margin: 0;
    padding: 0;
}


#projects {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex-wrap: wrap;
}

#projectList {
    display: flex;
    flex-direction: column;
    align-items: center;
}


.projectCard {
    background-color: rgba(27, 27, 27, 0.35);
    margin-bottom: 0.5rem;
    border-radius: 1rem;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    padding: 2rem;
}

.projectDesc {
    width: 20rem;
}


p {
    text-align: center;
    margin-top: 1rem;
    line-height: 1.5rem;
}

.brødtekst {
    padding: 3rem;
    background-color: rgba(128, 128, 128, 0.2);
    width: 75%;
    margin-left: auto;
    margin-right: auto;
    border-radius: 0.3rem;
}

/* NAVIGATION */



button {
    height: 4rem;
    width: 8rem;
    margin: 1rem;
    background-color: rgba(128, 128, 128, 0.2);
    border: solid white 1px;
    color: white;
    border-radius: 1rem;
}

.social-icon-link:hover {
    transition-duration: 150ms;
    transform: scale(1.1);
}

#about {
    margin-bottom: 20px;
    font-size: large;
    font-weight: 600;
}

button:hover {
    transition-duration: 150ms;
    transform: scale(1.05);
}

